--- a/assets/scss/_app.scss
+++ b/assets/scss/_app.scss
@@ -41,6 +41,8 @@ Component
 @import 'components/modal';
 @import 'components/hero';
 @import 'components/hc-icon-row';
+@import 'components/parallax-column';
+@import 'components/accordion';
 
 
 /*--------------------------------------------------------------
